# hdr-sdr-converter

./: .gitignore  README.md  hlg2pq.py  hlg2sdr.py  main.py  pq2hlg.py  pq2sdr.py  pyproject.toml  sdr2hlg.py  sdr2pq.py
converter/: __init__.py  base.py  converters.py
utils/: __init__.py  colorspace.py  io.py  quantize.py  sample.py  transfer.py  yuv_rgb_conv.py
